--- a/src/Header/Navbar.css
+++ b/src/Header/Navbar.css
@@ -43,15 +43,18 @@ span{
         top:0;
         left:-100%;
         z-index:-3;
+        transition:0.3s;
     }
     .nav-menu.active{
         left:0;
     }
     .nav-menu li{
         padding: 1rem 0;
+ 
     }
     .nav-menu li a{
         font-size: 2rem;
+ 
     }
     .hamburger{
         display: initial;
