--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -31,6 +31,17 @@ background-color:  rgb(66, 59, 59);
 .Content h1{
     font-size: xx-large;
 }
+.Content h1::after{
+    content: "";
+    background-color: #FC6736;
+    width:0;
+    height: 3px;
+    display: block;
+}
+h1:hover::after{
+width: 2%;
+transition: width 0.3s linear ;
+}
 .cnt-btn{
     padding: 10px;
     width:150px;
