--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -40,15 +40,13 @@
    padding-left: 35px;
     
 }
-.icons{
+.home-icons{
     display: flex; 
     justify-content: center;
     flex-direction: column;
    right: 20rem;  
+   gap:1rem;
 }
-.icons a{
-   column-gap: 1rem;
-}  
 
 @media screen and (max-width:500px) {
     .shape{
