--- a/src/Components/MyPortfolio/MyPortfolio.css
+++ b/src/Components/MyPortfolio/MyPortfolio.css
@@ -1,19 +1,54 @@
 .swiper {
-    width: 100%;
-    height: 100%;
-    margin-left: auto;
-    margin-right: auto;
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  height: calc((100% - 20px) / 2) !important;
+  width:auto;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
+.portfolio{
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  margin:10px;
+  padding:10px;
+  
+}
+.portfolio h1::after{
+  content: "";
+  background-color: #FC6736;
+  width:0;
+  height: 3px;
+  display: block;
+}
+h1:hover::after{
+width: 2%;
+transition: width 0.3s linear ;
+}
+
+.swipe img {
+  transition: 1s ease;
+  opacity: 0.3;
+  
   }
   
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    height: calc((100% - 30px) / 2) !important;
-  
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .swipe img:hover{
+  -webkit-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  transform: scale(0.8);
+  transition: 1s ease;
+  opacity: 1;
+
   }
-  
