--- a/src/Header/Navbar.css
+++ b/src/Header/Navbar.css
@@ -15,6 +15,19 @@ span{
     color:white;
     text-decoration:none;
 }
+li::after{
+    content: "";
+    background-color: #FC6736;
+    width:0;
+    height: 3px;
+    margin: auto;
+    display: block;
+}
+ li:hover::after{
+width: 100%;
+transition: width 0.3s linear;
+}
+
 .Header{
     display: flex;
     justify-content: space-between;
@@ -39,14 +52,16 @@ span{
          align-items: center;
         width:100%;
         height:100vh;  
+        /* background-color:beige; */
         position: absolute;
         top:0;
         left:-100%;
         z-index:-3;
         transition:0.3s;
+  
     }
     .nav-menu.active{
-        left:0;
+        left: 0px;
     }
     .nav-menu li{
         padding: 1rem 0;
@@ -59,4 +74,5 @@ span{
     .hamburger{
         display: initial;
     }
+
 }
