--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -6,9 +6,11 @@
 .home-container{
     display: flex;
     justify-content: space-evenly;
-
-    margin:2rem;
+    margin-left:2rem;
+    margin-right: 2rem;
+    margin-top: 6rem;
     flex-direction: row;
+   
 }
 .home-data{
     color:white;
