--- a/src/Header/Navbar.css
+++ b/src/Header/Navbar.css
@@ -33,6 +33,7 @@ transition: width 0.3s linear;
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    height:150px;
  
 }
 .Header button{
@@ -48,27 +49,31 @@ transition: width 0.3s linear;
 @media screen and (max-width:1040px){
     .nav-menu{
         flex-direction: column;
-        justify-content: center;
-         align-items: center;
-        width:100%;
-        height:100vh;  
-        /* background-color:beige; */
+         justify-content:center;
+         align-items:end;
+         width: 10%;
+         height:80%;
         position: absolute;
-        top:0;
-        left:-100%;
-        z-index:-3;
+        /* background-color: #FC6736; */
+        left:-130%;
+        z-index:2;
         transition:0.3s;
-  
-    }
+        /* padding: 1rem; */
+   
+    } 
     .nav-menu.active{
-        left: 0px;
+        left: 700px;
+        top:-220px;
+        z-index: 5;
+
     }
     .nav-menu li{
-        padding: 1rem 0;
+        padding: 0;
+        
  
     }
     .nav-menu li a{
-        font-size: 2rem;
+        font-size: 1rem;
  
     }
     .hamburger{
