--- a/src/Components/MyPortfolio/MyPortfolio.css
+++ b/src/Components/MyPortfolio/MyPortfolio.css
@@ -1,6 +1,6 @@
 .swiper {
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 40%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -26,6 +26,9 @@
   padding:10px;
   
 }
+.portfolio h1{
+  margin-left: 16rem;
+}
 .portfolio h1::after{
   content: "";
   background-color: #FC6736;
@@ -47,7 +50,7 @@ transition: width 0.3s linear ;
   .swipe img:hover{
   -webkit-transform: scale(0.8);
   -ms-transform: scale(0.8);
-  transform: scale(0.8);
+  transform: scale(3);
   transition: 1s ease;
   opacity: 1;
 
