--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -47,7 +47,7 @@
   border:2px solid rgba(255, 255, 255, 0.1);
   box-shadow: 5px 5px rgba(77, 70, 56, 0.1);
   border-radius: 10px;
-  padding: 20px 20px  40px 40px;
+  padding: 20px 20px  20px 40px;
   background-position: center;
    gap:1rem;
    margin: auto;
@@ -83,7 +83,7 @@
     margin-top: 10px;
 } 
 .details textarea{
-    height: 100px;
+    height: 90px;
     width: 320px;
     padding-top: 15px;
     border-radius: 5px;
@@ -91,7 +91,7 @@
     border: none;
     color:#FC6736;
     outline: none;
-    margin-top: 10px;
+    margin-top: 2px;
 }
 .details input::placeholder{
     color: #FC6736;
@@ -113,8 +113,10 @@
 }
 
  @media (max-width:769px) {
+
     .details{
         margin-top: 1rem;
+
     }
     .details input{
         width:auto;
@@ -122,7 +124,7 @@
     }
     .details textarea{
         width:190px;
-        height: fit-content;
+        height:auto;
     }
     .contact-box{
         display: flex;
@@ -138,6 +140,11 @@
     .details button{
        transform: none;
        width: fit-content;
+    }
+    .Contact{
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
    
 } 
