--- a/src/Components/MyServices/MyServices.css
+++ b/src/Components/MyServices/MyServices.css
@@ -3,17 +3,19 @@
  justify-content: space-between;
  align-items:flex-start;
  flex-direction: column;
- margin: 2rem;
- margin-left: 10rem;
- margin-right: 10rem;
+ margin: 1rem;
+ margin-left: 9rem;
+ margin-right: 8rem;
 }
 
 .boxes{
     display: flex;
     justify-content: space-between;
     text-align: center;
-    color:#a0a0a0;
-    margin: 3rem 3rem 0 0;
+    color:#fff;
+   
+    padding:2rem;
+    gap:0.5rem;
 }
 .boxes h1{
     color: #fff;
@@ -26,29 +28,37 @@
   background-color:#353839;
   border-radius: 10px;  
   padding: 2rem;
-  width:fit-content;
+  width:300px;
   margin-right: auto;
+  font-size: medium;
+  font-weight: 500;
 }
 .Brand{
     background-color:#353839;
     border-radius: 10px;  
     padding: 2rem;
-    width:fit-content;
+    width:300px;
     margin-left: 1rem;
+    font-size: medium;
+  font-weight: 500;
 }
 .Web{
     background-color:#353839;
     border-radius: 10px;  
     padding: 2rem;
-    width:fit-content;
+    width:300px;
     margin-left: 1rem;
+    font-size: medium;
+  font-weight: 500;
 }
+/* .Web ul li{
+    list-style-type: none;
+    text-decoration: none;
+ } */
 .UI:hover{
     background-color: #fa8862;
+    box-shadow: 0 0 10px 0 solid whitesmoke;
 
-}
-.UI svg:hover{
- color: #fff;
 }
 .Brand:hover{
     background-color:  #fa8862;
@@ -82,6 +92,11 @@ transition: width 0.3s linear ;
     }
     .Web{
         margin:0;
+    }
+
+    .Web ul li{
+       list-style-type: none;
+       text-decoration: none;
     }
     .services{
         margin: 0;
