--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -45,12 +45,13 @@
   align-items: center;
  background-color:transparent; 
   border:2px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 5px 5px rgba(77, 70, 56, 0.1);
+  box-shadow: 10px 10px rgba(51, 49, 45, 0.1);
   border-radius: 10px;
   padding: 20px 20px  20px 40px;
   background-position: center;
    gap:1rem;
    margin: auto;
+   z-index: 50px;
 
 }
 
